fix: adaptive menu and form, fix overflow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1324,10 +1324,6 @@ a:focus {
   }
 }
 
-.overflowHidden {
-  overflow-y: hidden;
-}
-
 .active-menu {
   display: flex;
   overflow-y: hidden;
@@ -1854,6 +1850,29 @@ a:focus {
       max-width: 450px;
     }
   }
+
+  .popup {
+    &__content {
+      top: 3%;
+      padding: 25px 60px 93px;
+      left: 40%;
+      -webkit-transform: translateX(-50%);
+      transform: translateX(-30%);
+    }
+    &__description {
+      margin-bottom: 30px;
+    }
+    &__form-body {
+      height: 310px;
+    }
+    &__text {
+      margin-top: 10px;
+      margin-bottom: 15px;
+    }
+    &__form-btn {
+      width: 100%;
+    }
+  }
 }
 
 @media (max-width: 750px) {
@@ -2150,10 +2169,29 @@ a:focus {
     &__content {
       width: 80%;
       padding: 40px 64px 47px;
+      top: 3%;
+      left: 32%;
     }
     &__form-btn {
       padding: 16px 28px;
       width: 100%;
+    }
+    &__form-body {
+      height: 300px;
+    }
+    .message {
+      top: 30%;
+      left: 10%;
+      line-height: 35px;
+      padding: 0 20px;
+    }
+  }
+
+  .nav-mobile {
+    &__list-item {
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 20px;
     }
   }
 }
@@ -2163,6 +2201,7 @@ a:focus {
     &__title {
       font-size: 22px;
       line-height: 22px;
+      margin-bottom: 20px;
     }
     &__title::after {
       top: 30px;
@@ -2170,10 +2209,37 @@ a:focus {
     &__description {
       font-size: 14px;
       line-height: 16px;
+      margin-bottom: 20px;
+    }
+    &__form-body {
+      height: 380px;
+    }
+    &__text {
+      margin-top: 5px;
+      margin-bottom: 5px;
     }
     &__content {
-      width: 70%;
-      padding: 40px 32px 24px;
+      width: 94%;
+      padding: 40px 32px 75px;
+      top: 2%;
+    }
+    &__close {
+      width: 25px;
+      height: 25px;
+      top: 20px;
+      right: 20px;
+    }
+    &__form-btn {
+      padding: 14px 28px;
+    }
+    &__close img {
+      width: 85%;
+    }
+    .message {
+      top: 30%;
+      left: 2%;
+      line-height: 35px;
+      padding: 0 20px;
     }
   }
 }
@@ -2200,25 +2266,37 @@ a:focus {
       line-height: 22px;
     }
     &__title::after {
-      top: 45px;
+      top: 25px;
     }
     &__description {
       font-size: 14px;
       line-height: 14px;
     }
     &__content {
-      width: 70%;
+      width: 85%;
       padding: 50px 32px 24px;
+      left: 35%;
     }
     &__form-body {
       padding: 0;
+      height: 330px;
     }
     &__form-btn {
       padding: 16px 18px;
       width: 100%;
     }
+    .message {
+      top: 30%;
+      left: 2%;
+      line-height: 35px;
+      padding: 0 20px;
+    }
+    .message__text {
+      font-size: 18px;
+    }
   }
 }
+
 .message {
   display: none;
   text-align: center;
@@ -2238,8 +2316,6 @@ a:focus {
   &.active {
     display: block;
   }
-
-  
 }
 
 .loader {
